# advent-of-code

./: .gitignore  Cargo.toml
2015/day-01/: Cargo.toml
2015/day-02/: Cargo.toml
2015/day-03/: Cargo.toml
2015/day-04/: Cargo.toml
2015/day-05/: Cargo.toml
2015/day-06/: Cargo.toml
2015/day-07/: Cargo.toml
2015/day-08/: Cargo.toml
2015/template/: Cargo.toml
2023/day-01/: Cargo.toml
2023/day-01/src/: part-1.rs
2023/day-02/: Cargo.toml
2023/day-03/: Cargo.toml
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml
2023/day-06/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-08/: Cargo.toml
2023/day-09/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-11/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-13/: Cargo.toml
2023/day-14/: Cargo.toml
2023/day-15/: Cargo.toml
2023/day-16/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-18/: Cargo.toml
2023/day-19/: Cargo.toml
2023/day-20/: Cargo.toml
2023/day-21/: Cargo.toml
2023/day-22/: Cargo.toml
2023/day-23/: Cargo.toml
2023/day-24/: Cargo.toml
2023/day-25/: Cargo.toml
2023/template/: Cargo.toml  template.rs
