[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2023_24_1"
path = "src/bin/part-1.rs"

[[bin]]
name = "2023_24_2"
path = "src/bin/part-2.rs"

[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
itertools = "0.12.0"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"]}
glam = "0.25.0"
z3 = { git="https://github.com/prove-rs/z3.rs", rev = "ab67534", features = ["bundled"]}
